[package]
name = "verus-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vstd = { git = "https://github.com/verus-lang/verus.git", rev = "fe04886" }
builtin = { git = "https://github.com/verus-lang/verus.git", rev = "fe04886" }
builtin_macros = { git = "https://github.com/verus-lang/verus.git", rev = "fe04886" }

[package.metadata.verus.ide]
extra_args = "--crate-type=dylib --expand-errors --multiple-errors 5"

# [[bin]]
# name = "test_marshal"
# path = "src/bin/test.rs"
